--- a/index.html
+++ b/index.html
@@ -2,32 +2,37 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Codetrek | Forum</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="./bootstrap-4.1.3-dist/css/bootstrap.min.css">
+<script src="./bootstrap-4.1.3-dist/js/jquery-3.2.1.slim.min.js"></script>
+<script src="./bootstrap-4.1.3-dist/js/popper.min.js"></script>
+<script src="./bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<nav class="navbar navbar-expand-sm bg-dark navbar-dark ">
+	<nav class="navbar navbar-dark bg-dark sticky-top navbar-expand-lg">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler1" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
  <a class="navbar-brand" href="#">CodeTrek Forum</a>
- <ul class="navbar-nav ">
-    <li class="nav-item">
-      <a class="nav-link" href="#">Questions</a>
-    </li>
-    <li class="nav-item dropdown navbar-right">
-      <a class="nav-link dropdown-toggle " href="#" id="navbardrop" data-toggle="dropdown"><span class="glyphicon glyphicon-cog"></span></a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">ABC</a>
-        </div>
-    </li>
-  </ul>
+  <div class="collapse navbar-collapse" id="navbarToggler1">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Questions <span class="sr-only">(current)</span></a>
+      </li>
+     <li class="nav-item dropdown ">
+    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Settings</a>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="#">Option 1</a>
+    </div>
+  </li>
+    </ul>
+  </div>
 </nav>
-	<div>
-		<h1>Questions</h1>
-		<div>
+	<div class="container">
+		<h2>Questions</h2>
+		<span>
 		<input type="text" placeholder="Search question">
 		<input type="button">
-		</div>
+		</span>
 		<input type="button" value='Ask question'>
 	</div>
 	<div>
